改了学生报名部分和后台课程添加，再需要更改学校上传图片模块

--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/coursesc.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/coursesc.html.twig
@@ -1,6 +1,6 @@
-{% extends 'TopxiaAdminBundle::new-layout.html.twig' %}
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'newadmin_coursesc' %}
+{% set menu = 'admin_coursesc_manager' %}
 {% set script_controller = 'level/level' %} 
 
 {% block main %}
