--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/registersc-add.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Background/school/registersc-add.html.twig
@@ -6,7 +6,7 @@
 {% block main %}
 <div class="well well-sm">
 <form id="add-schools-form" class="form-horizontal" method="post">
-    
+    {% if flag == 1 %}
     <div class="form-group">
         <label class="col-md-2 control-label">添加学校信息</label>
         <div class="col-md-7 controls radios">
@@ -79,6 +79,81 @@
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
+{% elseif flag == 2 %}
+<div class="form-group">
+        <label class="col-md-2 control-label">添加培训机构信息</label>
+        <div class="col-md-7 controls radios">
+            <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+{{ web_macro.flash_messages() }}
+{#中文名称#}
+<div class="form-group">
+    <label class="col-md-2 control-label">{{'中文名称'|trans}}</label>
+    <div class="col-md-7 controls radios">
+        <input type="text" id="schools_chineseName" name="schools[chineseName]" class="form-control" data-widget-cid="widget-1" data-explain=""
+            value="{{ schools.chineseName|default('') }}" />
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
+{#英文名称#}
+<div class="form-group form-forIam-group form-notStudent-group">
+    <label class="col-md-2 control-label">{{'英文名称'|trans}}</label>
+    <div class="col-md-7 controls">
+        <input type="text" id="schools_englishName" name="schools[englishName]" class="form-control" value="{{ schools.englishName|default('') }}"
+        />
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
+{#简称#}
+<div class="form-group form-forIam-group form-notStudent-group">
+    <label class="col-md-2 control-label">{{'简称'|trans}}</label>
+    <div class="col-md-7 controls">
+        <input type="text" id="schools_abbreviation" name="schools[abbreviation]" class="form-control" value="{{ schools.abbreviation|default('') }}"
+        />
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
+{#类别#}
+<div class="form-group form-forIam-group form-notStudent-group">
+    <label class="col-md-2 control-label">{{'类别'|trans}}</label>
+    <div class="col-md-7 controls">
+        <input type="text" id="schools_type" name="schools[type]" class="form-control" value="{{ schools.type|default('') }}" />
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
+{#学校地址#}
+<div class="form-group form-forIam-group form-notStudent-group">
+    <label class="col-md-2 control-label">{{'学校地址'|trans}}</label>
+    <div class="col-md-7 controls">
+        <input type="text" id="schools_schoolAddress" name="schools[schoolAddress]" class="form-control" value="{{ schools.schoolAddress|default('') }}"
+        />
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
+{#校园人文#}
+<div class="form-group">
+    <label class="col-md-2 control-label">{{'校园人文'|trans}}</label>
+    <div class="col-md-7 controls">
+        <textarea name="schools[campusHumanities]" rows="10" id="schools_campusHumanities" class="form-control" data-image-upload-url="{{ path('editor_upload', {token:upload_token('user')}) }}">{{ schools.campusHumanities|default('') }}</textarea>
+    </div>
+</div>
+
+{#校园风情#}
+<div class="form-group form-forIam-group form-notStudent-group">
+    <label class="col-md-2 control-label">{{'校园风情'|trans}}</label>
+    <div class="col-md-7 controls">
+        <textarea name="schools[campusAmorousFeelings]" rows="10" id="schools_campusAmorousFeelings" class="form-control" data-image-upload-url="{{ path('editor_upload', {token:upload_token('user')}) }}">{{ schools.campusAmorousFeelings|default('') }}</textarea>
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
+{% endif %}
 
 {#省份#}
 <div class="form-group">
