--- a/htdocs/src/Topxia/AdminBundle/Resources/views/Block/table.html.twig
+++ b/htdocs/src/Topxia/AdminBundle/Resources/views/Block/table.html.twig
@@ -1,9 +1,11 @@
 <div class="btn-group">
-<a href="{{ url('admin_block', {category: 'all'}) }}" type="button" class="btn btn-default btn-sm {% if type == 'all'%} btn-primary{% endif %}">{{'所有'|trans}}</a>
+<a href="{{ url('admin_block', {category: 'all'}) }}" type="button" class="btn btn-default btn-sm {% if type == 'all'%} btn-primary{% endif %}">{{'默认'|trans}}</a>
+{#原来模板部分 #}
+{#<a href="{{ url('admin_block', {category: 'all'}) }}" type="button" class="btn btn-default btn-sm {% if type == 'all'%} btn-primary{% endif %}">{{'所有'|trans}}</a>
 
 <a href=" {{ url('admin_block', {category: 'theme'}) }}" type="button" class="btn btn-default btn-sm {% if type == 'theme'%}btn-primary{% endif %}">{{'当前主题'|trans}}</a>
 
-<a href=" {{ url('admin_block', {category: 'system'}) }}" type="button" class="btn btn-default btn-sm {% if type == 'system'%}btn-primary{% endif %}">{{'系统'|trans}}</a>
+<a href=" {{ url('admin_block', {category: 'system'}) }}" type="button" class="btn btn-default btn-sm {% if type == 'system'%}btn-primary{% endif %}">{{'系统'|trans}}</a>#}
 
 {% set url = path('admin_block_match') ~ '?q={{query}}' %}
 </div>
