--- a/htdocs/src/Topxia/WebBundle/Resources/views/Default/index.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/Default/index.html.twig
@@ -39,6 +39,7 @@
           </div>
         </div>
   <div class="swiper-pager"></div>
+  </section>
     {% endcache %}
     {% for config in themeConfig.blocks.left|default([]) %}
 
