--- a/htdocs/src/Topxia/WebBundle/Resources/views/School/add-school.html.twig
+++ b/htdocs/src/Topxia/WebBundle/Resources/views/School/add-school.html.twig
@@ -1,22 +1,34 @@
-{% extends 'TopxiaWebBundle:Settings:layout.html.twig' %} {% block title %}添加学校{% endblock %} {% set script_controller = 'schools/add-school'
-%} {% set side_nav = 'schools' %} {% block main %} {#左侧菜单{% embed "TopxiaWebBundle:Bootstrap:panel.html.twig" with {class:'panel-col'}
-%}#} {% block heading %}添加学校{% endblock %} {% block body %}
+{% extends 'TopxiaWebBundle:Settings:layout.html.twig' %} 
+{% block title %}添加学校{% endblock %} 
+{% block main %} 
+{% block heading %}添加学校{% endblock %} 
+{% block body %}
 
-<form id="add-schools-form" class="form-horizontal" method="post">
+<form id="add-schools-form" class="form-horizontal" method="post" action="{{ url('school_add') }}">
     
     <div class="form-group">
-        <label class="col-md-2 control-label">添加学校信息</label>
+        <label class="col-md-2 control-label">{{'添加学校或培训机构信息'|trans}}</label>
         <div class="col-md-7 controls radios">
             <div class="help-block" style="display:none;"></div>
 </div>
 </div>
 {{ web_macro.flash_messages() }}
+{#用户注册账号#}
+<div class="form-group">
+    <label class="col-md-2 control-label">{{'用户注册账号(学校管理员账号)'|trans}}</label>
+    <div class="col-md-7 controls radios">
+        <input type="text" id="userName" name="userName" class="form-control" data-widget-cid="widget-1" data-explain=""
+            value="{{ userName|default('') }}" /><span>{{'*用户注册账号(学校管理员账号|必填项)'|trans}}<a href="{{ path('register') }}">{{'没有账号|注册'}}</a></span>
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
 {#中文名称#}
 <div class="form-group">
     <label class="col-md-2 control-label">{{'中文名称'|trans}}</label>
     <div class="col-md-7 controls radios">
         <input type="text" id="schools_chineseName" name="schools[chineseName]" class="form-control" data-widget-cid="widget-1" data-explain=""
-            value="{{ schools.chineseName|default('') }}" />
+            value="{{ schools.chineseName|default('') }}" /><span>{{'*学校或培训机构中文名称(必填项)'|trans}}</span>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -26,7 +38,7 @@
     <label class="col-md-2 control-label">{{'英文名称'|trans}}</label>
     <div class="col-md-7 controls">
         <input type="text" id="schools_englishName" name="schools[englishName]" class="form-control" value="{{ schools.englishName|default('') }}"
-        />
+        /><span>{{'学校或培训机构英文名称(选填项)'|trans}}</span>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -36,7 +48,7 @@
     <label class="col-md-2 control-label">{{'简称'|trans}}</label>
     <div class="col-md-7 controls">
         <input type="text" id="schools_abbreviation" name="schools[abbreviation]" class="form-control" value="{{ schools.abbreviation|default('') }}"
-        />
+        /><span>{{'学校或培训机构简称(选填项)'|trans}}</span>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -46,6 +58,7 @@
     <label class="col-md-2 control-label">{{'类别'|trans}}</label>
     <div class="col-md-7 controls">
         <input type="text" id="schools_type" name="schools[type]" class="form-control" value="{{ schools.type|default('') }}" />
+        <span>{{'*学校或培训机构类别(选填项)'|trans}}</span>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -55,7 +68,7 @@
     <label class="col-md-2 control-label">{{'学校地址'|trans}}</label>
     <div class="col-md-7 controls">
         <input type="text" id="schools_schoolAddress" name="schools[schoolAddress]" class="form-control" value="{{ schools.schoolAddress|default('') }}"
-        />
+        /><span>{{'学校或培训机构地址(选填项)'|trans}}</span>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -65,6 +78,7 @@
     <label class="col-md-2 control-label">{{'校园人文'|trans}}</label>
     <div class="col-md-7 controls">
         <textarea name="schools[campusHumanities]" rows="10" id="schools_campusHumanities" class="form-control" data-image-upload-url="{{ path('editor_upload', {token:upload_token('user')}) }}">{{ schools.campusHumanities|default('') }}</textarea>
+        <span>{{'学校或培训机构校园人文(选填项)'|trans}}</span>
     </div>
 </div>
 
@@ -73,6 +87,24 @@
     <label class="col-md-2 control-label">{{'校园风情'|trans}}</label>
     <div class="col-md-7 controls">
         <textarea name="schools[campusAmorousFeelings]" rows="10" id="schools_campusAmorousFeelings" class="form-control" data-image-upload-url="{{ path('editor_upload', {token:upload_token('user')}) }}">{{ schools.campusAmorousFeelings|default('') }}</textarea>
+        <span>{{'学校或培训机构校园风情(选填项)'|trans}}</span>
+        <div class="help-block" style="display:none;"></div>
+</div>
+</div>
+
+{#培训类型#}
+<div class="form-group">
+    <label for="3" class="col-md-2 control-label">{{'培训类型'|trans}}</label>
+    <div class="col-md-7 controls">
+        <select id="schools_institutionsType" name="schools[institutionsType]" class="form-control" data-widget-cid="widget-2" data-explain="">
+                               <option value="0">
+                                   {{ '学校'|default('') }}
+                               </option>
+                                <option value="1">
+                                   {{ '培训机构'|default('') }}
+                               </option>
+        </select>
+        <span>{{'*培训类型<学校or培训机构>(必填项)'|trans}}</span>
         <div class="help-block" style="display:none;"></div>
 </div>
 </div>
@@ -82,7 +114,7 @@
     <label for="3" class="col-md-2 control-label">{{'省份'|trans}}</label>
     <div class="col-md-7 controls">
         <select id="schools_province_id" name="schools[province_id]" class="form-control" data-widget-cid="widget-2" data-explain="">
-                               {% for pro in province %}
+                               {% for pro in provinces %}
                                <option value="{{ pro.id }}">
                                    {{ pro.name|default('') }}
                                </option>
@@ -97,7 +129,7 @@
     <label for="3" class="col-md-2 control-label">{{'城市'|trans}}</label>
     <div class="col-md-7 controls">
         <select id="schools_city_id" name="schools[city_id]" class="form-control" data-widget-cid="widget-2" data-explain="">
-                               {% for ct in city %}
+                               {% for ct in citys %}
                                <option value="{{ct.id }}">
                                    {{ ct.name|default('') }}
                                </option>
@@ -116,4 +148,7 @@
 <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
 </form>
 
-{% endblock %} {% endblock %}
+</div>
+
+{% endblock %} 
+{% endblock %}
